--- a/slide1/a1.slideToggle.html
+++ b/slide1/a1.slideToggle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-<script src="/ulib/ujquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 $(document).ready(
     function() {
@@ -39,4 +39,5 @@ Welcome
 <div id="dv2" style="display: none;">
 Have a nice day !
 </div>
+
 </center>
